ITEM WERKT WOOOHOOO

--- a/AUSfp/AUSfp.csproj
+++ b/AUSfp/AUSfp.csproj
@@ -89,6 +89,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ItemClass.cs" />
     <Compile Include="Start.cs">
       <SubType>Form</SubType>
     </Compile>
